[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blendsql"
description = "Query language for blending SQL logic and LLM reasoning across multi-modal data. [Findings of ACL 2024]"
authors = [
    {"name" = "Parker Glenn", "email" = "parkervg5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
    "language models",
    "query language",
    "symbolic ai",
    "sql"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "guidance",
    "pyparsing==3.1.1",
    "pandas>=2.0.0",
    "bottleneck>=1.3.6",
    "python-dotenv==1.0.1",
    "sqlglot==18.13.0",
    "sqlalchemy>=2.0.0",
    "skrub==0.2.0",
    "scikit-learn==1.4.2",
    "duckdb<1",
    "rapidfuzz",
    "haystack-ai>2.0.0",
    "sentence_transformers",
    "huggingface_hub",
    "datasets",
    "platformdirs",
    "attrs",
    "tqdm",
    "colorama",
    "tabulate>=0.9.0",
    "typeguard",
    "httpx",
    "setuptools",  # For python 3.12
]
version = "0.0.27"

[project.urls]
Documentation = "https://parkervg.github.io/blendsql/"

[project.scripts]
blendsql = "blendsql.blend_cli:main"

[tool.setuptools.packages.find]
exclude=["examples*", "research*", "img*"]

[tool.setuptools.package-data]
'*' = ['*.json']

[tool.black]
line-length = 88

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["B"]
# E501: Line length violations
# B032: Possible unintentional type annotation
# B028: No explicit stacklevel argument found
ignore = ["E501", "B032", "B028", "B005"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    # Added
    "third_party",
    "__init__.py", # Will remove dot imports if this isn't here
    "README.md"
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pycodestyle]
max-doc-length = 200